--- a/src/views/flight.ejs
+++ b/src/views/flight.ejs
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <a href="/JS4/listFlights.html" id="submit" type="submit" class="btn btn-success">submit</a>
+                <a href="/flight/list" id="submit" type="submit" class="btn btn-success">submit</a>
             </div>
         </div>
 
