--- a/src/views/check-out.ejs
+++ b/src/views/check-out.ejs
@@ -16,10 +16,13 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="col-sm-8"></div>
-      <div class="container-fluid" style="background-color: coral"></div>
+      <div class="col-sm-8">
+        <div class="container-fluid" style="background-color: coral">test</div>
+      </div>
       <div class="col-sm-4">
-        <div class="container-fluid" style="background-color: black;"></div>
+        <div class="container-fluid" style="background-color: black;">
+          testetsetaesdsagasdgfasd fadsfdsfsdafdsfsadf
+        </div>
       </div>
     </div>
   </body>
