--- a/src/public/checkout-box.css
+++ b/src/public/checkout-box.css
@@ -1,20 +1,28 @@
 .payment-item {
-	margin-top: 2% !important;
-	margin-bottom: 2% !important;
-	padding: 1% 1%;
-	border-bottom: 0.1px solid whitesmoke;
+  margin-top: 2% !important;
+  margin-bottom: 2% !important;
+  padding: 1% 1%;
+  border-bottom: 0.1px solid whitesmoke;
 }
-
+.payment-item-fee {
+  margin-top: 2% !important;
+  margin-bottom: 2% !important;
+  padding: 1% 1%;
+}
 .glyphicon-menu-right {
-	color: white;
-	background: aqua;
-	margin-right: 2.5%;
+  color: white;
+  background: aqua;
+  margin-right: 2.5%;
 }
 
 .clickable {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .price-tag {
-	text-align: right;
+  text-align: right;
+}
+
+.text-red {
+  color: red;
 }
